<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">吾测</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="activity_infor_img">关于我们</string>
	<string name="activity_main_dot">点</string>
	<string name="tab_main_test_now">立即开始测试</string>
	<string name="tab_main_tests">题库</string>
	<string name="tab_main_tests_sum">197</string>
	<string name="tab_main_tests_choose">性格测试</string>
	<string name="tab_main_tests_desc">心理测试（Psychological Test）是一种比较先进的测试方法，它是指通过一系列手段，将人的某些心理特征数量化，来衡量个体心理因素水平和个体心理差异差异的一种科学测量方法。</string>
	<string name="tab_main_tests_choose_num">187</string>
	<string name="tab_main_tests_time">预计用时30分</string>
	<string name="tab_main_tester">请填写测试者</string>
	<string name="tab_mytest_tester">还没有人测试过，赶快试试吧</string>
	<string name="tab_mytest_result">测试结果</string>
	<string name="tab_mytest_result_des"></string>
	<string name="tab_mytest_test_name">心理健康测试结果报告</string>
	<string name="do_testing_title">性格测试</string>
	<string name="do_testing_add_infor">广告</string>
	<string name="do_testing_done">F180-S7</string>
	<string name="do_testing_done_infor">倒一杯水，停下脚步看看这个世界</string>
	<string name="do_stesting_done_infor">过去过不去的都会过去，不是吗？</string>
	<string name="do_stesting_done">共10题</string>
	<string name="do_testing_finished">结束测试</string>
	<string name="do_testing_pre">上一题</string>
	<string name="do_testing_next">下一题</string>
	<string name="do_simple_testing_title">职场性格测试结果报告</string>
	<string name="do_testing_test_name">1.我宁愿服饰素洁大方，而不愿争奇斗艳惹人注目：</string>
	<string name="tab_mytest_report_1">性格因素分析表</string>
	<string name="tab_mytest_report_2">实际应用素质分析表</string>
	<string name="tab_mytest_report_3">推荐职业-IT人员用</string>
	<string name="tab_mytest_delete">这个结果不准，我要重测</string>
	<string name="do_testing_sure_back">正在进行测试，确定返回吗？</string>
	<string name="do_testing_btn_cancel">取消</string>
	<string name="do_testing_btn_sure">确定</string>
	<string name="tab_setting_about">关于作者</string>
	<string name="tab_setting_found">你发现了我</string>
	<string name="tab_setting_myself">真的不知道说些什么，转眼之间毕业已经两年没到还差一年半了，不禁夜里起床尿尿都会感叹一声“唉，房东啊，厕所的灯坏了怎么TM还不修啊”，说实话我也是有尊严的人，虽然都被狗吃了，独自LOL的日子又有几人能明白；潸然泪下，黯然神伤，谁TM炒菜放这么多辣椒也不通通风啊，戴着刚脱下的袜子，对着楼下大声喊：“我要努力，我要奋斗”，喊完之后俯下身做25个俯卧撑，满头大汗的对着镜子笑:“嗯，这次裤裆没岔开”，门外一阵急促的敲门声，还在想着那个妹子来找我了呢，谁知刚打开门，就被人按倒在地，混乱之中才知道原来是有人报警说看到这房间有小偷，哼哼，了解了情况就好办了，解释清楚他们肯定放人，于是我非常淡定的说：“再不放了老子，叫兄弟们过来干死你们信不信”，于是毫无疑问我被带走了。说的远了，不得不说起这个想法了，这还是起源于在学校给老师做的一个项目，很好玩主要是简单，但是做完之后我发现，总觉得少了点什么，事与愿违啊，就像我之前的那个小应用（奖证集，CSDN上有源码搜作者：jov123）一样，满腔的热火被强奸的连衣服都不剩下。总之我还是坚持了，这个心理健康测试应用又是什么原因呢，没有什么只是觉得有意思，如果可以，可以把各种各样的测试都加进去，或者做成B/S结构的，可惜了啊，但愿各位大神能够实现我的愿望。你伤害了我，还一笑而过@#%*，去你妹的情歌啊。忙忙碌碌秋寒意，半卷梅花，一抹情愁，苦乐本是人生路，奈何不羁放荡我，三两日，叹叹忧。</string>
	<string name="tab_setting_add">广告设置</string>
	<string name="tab_setting_add_size">460*300</string>
	<string name="tab_setting_myOther">作者：jov123 提供测试 www.javaapk.com</string>
	<string name="create_user_dialog_tip">创建新用户</string>
	<string name="create_user_dialog_name">姓名</string>
	<string name="create_user_dialog_name_tip">你只有20字的长度</string>
	<string name="create_user_dialog_sex">性别</string>
	<string name="create_user_dialog_sex_m">男</string>
	<string name="create_user_dialog_sex_w">女</string>
	<string name="create_user_dialog_sex_ok">好了，开始测试</string>
	<string name="create_user_dialog_infor">hi，兄弟告诉我为什么要选性别？难道就只有这两个选择，哎，哎，说你呢，往桌子下面钻的那个，OOXX你m，什么叫我只有20字的长度啊，哥是女的。。。。其实，我不想说的，是你逼我的。。。。我#@%#￥%</string>
	<string name="usermanage_list_title">用户列表</string>
	<string name="test_infor_dialog_btn">关闭</string>
	<string name="tab_setting_photo">相册</string>
	<string name="tab_setting_camero">拍照</string>
	<string name="test_choose_per">大学生心理素质健康测试</string>
	<string name="test_choose_simple">职场性格测试</string>
	<string name="test_choose_color">颜色性格测试</string>
	<string name="test_box_num">题库统计</string>
</resources>