<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/text_selector_background"
        android:text="@string/do_testing_sure_back" 
        android:textColor="@color/black"/>
    <RelativeLayout
        android:id="@+id/add_note_linear"
        android:layout_width="fill_parent"
        android:layout_height="35.0dip"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dip"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_shape_cancel"
            android:text="@string/do_testing_btn_cancel" />
        <Button
            android:id="@+id/btn_sure"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_shape"
            android:text="@string/do_testing_btn_sure" />
    </RelativeLayout>

</LinearLayout>