<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_userinfor_set"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:background="@color/navpage"
        android:scrollbarThumbVertical="@drawable/scrollbar_handle_vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:paddingBottom="10.0dip" >
            <LinearLayout
                android:id="@+id/info_qzone_mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/shape_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/userinfor_sum"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" 
                    android:background="@drawable/comm_bg_selected"
                    >
                    <TextView
                        style="@style/feed_subtext_on_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/test_box_num" />
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:background="@drawable/shape_line" />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/feed_subtext_on_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24.0dip"
                        android:text="@string/test_choose_per" />

                    <TextView
                        android:id="@+id/userinfor_set_sum_2"
                        style="@style/feed_subtext_on_white"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="24.0dip"
                        android:layout_weight="1.0"
                        android:gravity="right"
                        android:text="187题" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:background="@drawable/shape_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/feed_subtext_on_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24.0dip"
                        android:text="@string/test_choose_simple" />

                    <TextView
                        android:id="@+id/userinfor_set_sum_3"
                        style="@style/feed_subtext_on_white"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="24.0dip"
                        android:layout_weight="1.0"
                        android:gravity="right"
                        android:text="10题" />
                </LinearLayout>

<!-- 
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="30.0dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/feed_subtext_on_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24.0dip"
                        android:text="@string/test_choose_color" />

                    <TextView
                        android:id="@+id/userinfor_set_sum_4"
                        style="@style/feed_subtext_on_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="24.0dip"
                        android:layout_weight="1.0"
                        android:gravity="right"
                        android:text="30题" />
                </LinearLayout> -->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>